2003-10-03  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * vtkGdcmReader is now able to read rgb dicom file.
      * src/gdcmHeaderHelper : GetNumberOfScalarComponents()
2003-10-02  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/*.cxx removed pragma thingies to src/gdcmCommon.h
        Two reasons: - clear things
                     - third parties acces gdcm through header files, so won't
                     suffer anymore VC++ complains

2003-09-22  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmUtil.[cxx|h] : change the _CreateCleanString return value from
        char* to std::string. Thus, the use of strdup becoomes useless. (see
        previous commis of Malaterre)
      * src/gdcmElValSet.cxx : reuse commented call to _CreateCleanString like
        before the last Malaterre's commit.

2003-09-19  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * This commit should fix the Debug building under VC++, the problem
        was mainly a mixture of debug and release lib being loaded at startup.
      * I also remove a depency to a specific C function: strdup. Because I had
        to force the link to msvcrtd (whereas strdup is in libc).

2003-09-16  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * "gdcm::Unfound" string changed to a constant variable (GDCM_UNFOUND)
        located in the gdcmCommon.h file. All use of reference of tha has been
        changed to now use the variable GDCM_UNFOUND.

2003-09-16  Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with JPR
      * Cosmetic changes:
        - gdcmPython/testSuite.py adapted to the JPR updated Dicts/dicomV3.dic
          Dicom dictionary. The test suite can now be run again. Note:
          I'm note very happy with the " (RET)" changes. I believe this
          RETAINED comment should be dropped when parsing the dictionary.
        - PACKAGER corrected
        - DEVELOPPER added.