@@ -1,0 +1,4 @@
+SUBDIRS(
+  libijg12 
+  libijg8
+)
